--- a/style.css
+++ b/style.css
@@ -202,7 +202,8 @@ h2 {
 
 .project-thumbnail {
     width: 100%;
-    height: auto;
+    height: 300px;
+    object-fit: cover;
     border-radius: 8px;
     margin-bottom: 1rem;
 }
